feat: Update README and add edit profile page
- implement edit-profile menu
- add ui for most popular musics in profiles page
- README.md: Change the local server URL from port 3000 to 5000.
- levels.css: Adjust margin-right and margin-top values for better layout.
- custom.js: Remove unused scroll event handling to avoid scrolling glitches.

--- a/src/views/browse.ejs
+++ b/src/views/browse.ejs
@@ -23,15 +23,13 @@
 		crossorigin="anonymous" referrerpolicy="no-referrer" />
 
 	<!-- Additional CSS Files -->
-	<link rel="stylesheet" href="css/upload.css">
-	<link rel="stylesheet" href="css/funkey.css">
-	<link rel="stylesheet" href="css/owl.css">
-	<link rel="stylesheet" href="css/animate.css">
-	<link rel="stylesheet" href="css/homepage.css">
-	<link rel="stylesheet" href="css/levels.css">
-	<link rel="stylesheet" href="css/toasts.css">
+	<link rel="stylesheet" href="/css/upload.css">
+	<link rel="stylesheet" href="/css/funkey.css">
+	<link rel="stylesheet" href="/css/homepage.css">
+	<link rel="stylesheet" href="/css/levels.css">
+	<link rel="stylesheet" href="/css/toasts.css">
 
-	<link rel="shortcut icon" href="assets/icon/logo.ico" type="image/x-icon">
+	<link rel="shortcut icon" href="assets/icon/funkey.ico" type="image/x-icon">
 
 	<style>
 		.most-popular {
