--- a/src/views/home.ejs
+++ b/src/views/home.ejs
@@ -22,11 +22,9 @@
 		crossorigin="anonymous" referrerpolicy="no-referrer" />
 
 	<!-- Additional CSS Files -->
-	<link rel="stylesheet" href="css/funkey.css">
-	<link rel="stylesheet" href="css/owl.css">
-	<link rel="stylesheet" href="css/animate.css">
-	<link rel="stylesheet" href="css/homepage.css">
-	<link rel="stylesheet" href="css/levels.css">
+	<link rel="stylesheet" href="/css/funkey.css">
+	<link rel="stylesheet" href="/css/homepage.css">
+	<link rel="stylesheet" href="/css/levels.css">
 	<link rel="stylesheet" href="/css/particles.css">
 
 	<!-- Favicons -->
