--- a/src/views/levels.ejs
+++ b/src/views/levels.ejs
@@ -42,7 +42,7 @@
 						<input name="capital-letters" class="form-check-input" type="checkbox" id="customOption1">
 					</div>
 					<div class="form-check">
-						<label class="form-check-label" for="customOption2">Punctuation marks</label>
+						<label class="form-check-label" for="customOption2">Punctuations&nbsp;&nbsp;&nbsp;</label>
 						<input name="Punctuation" class="form-check-input" type="checkbox" id="customOption2">
 					</div>
 					<div class="form-check">
