--- a/public/css/levels.css
+++ b/public/css/levels.css
@@ -121,15 +121,15 @@
   width: max-content;
   text-align: left;
   float: right;
-  margin-right: 2%;
-  margin-top: 1%;
+  margin-right: 1.4em;
+  margin-top: 0.25em;
 
   border-radius: 3px;
 }
 
 .form-check {
   z-index: 10001;
-  display: flex;
+  display: flex !important;
   flex-direction: row;
   justify-content: space-between;
   width: 100%;
