--- a/src/views/profile.ejs
+++ b/src/views/profile.ejs
@@ -26,22 +26,21 @@
 
 	<!-- Additional CSS Files -->
 	<link rel="stylesheet" href="/css/funkey.css">
-	<!-- <link rel="stylesheet" href="css/owl.css"> -->
-	<!-- <link rel="stylesheet" href="css/animate.css"> -->
 	<link rel="stylesheet" href="/css/homepage.css">
-	<!-- <link rel="stylesheet" href="css/levels.css"> -->
-
-	<!-- Favicons -->
-	<!-- <link rel="icon" type="image/png" sizes="32x32" href="assets/icon/favicon-32x32.png">
-	<link rel="icon" type="image/png" sizes="16x16" href="assets/icon/favicon-16x16.png">
-	<link rel="apple-touch-icon" sizes="180x180" href="assets/icon/apple-touch-icon.png">
-	<link rel="manifest" href="assets/icon/site.webmanifest"> -->
-
-	<link rel="shortcut icon" href="assets/icon/logo.ico" type="image/x-icon">
-	<!-- <link rel="icon" type="" sizes="32x32" href="assets/icon/logo.ico"> -->
+	<link rel="stylesheet" href="/css/levels.css">
 	<link rel="stylesheet" href="/css/toasts.css">
 
+	<link rel="shortcut icon" href="assets/icon/funkey.ico" type="image/x-icon">
+
 	<style>
+		.page-content {
+			padding: 0 !important;
+		}
+
+		.header-area .main-nav {
+			justify-content: space-between !important;
+		}
+
 		#affirmModal {
 			color: #e1e1e1;
 		}
@@ -50,7 +49,7 @@
 			margin-top: 40%;
 			background-color: #1f2122dd !important;
 		}
-    
+
 		.login {
 			padding: 0 !important;
 			height: 1em !important;
@@ -67,17 +66,67 @@
 			background-color: transparent !important;
 			color: #fff !important;
 			text-decoration: none !important;
-			border-color: #fff !important;
+			/* border-color: #fff !important; */
+			border-color: #0351a4aa !important;
 			border-width: 2px;
 			border-width: 2px !important;
 			transition: border-width 0.5s ease;
 		}
-		
+
 		.logout-btn:hover {
 			font-weight: 700;
 			border-width: 2px !important;
 			border-color: #0351a4aa !important;
 			background-color: transparent !important;
+		}
+
+		input#searchText {
+			background-color: #1f2122dd !important;
+		}
+
+		.clip-thumbnail {
+			position: relative;
+			display: block;
+			width: 4.5rem;
+			height: 4.5rem;
+			background-position: center;
+			background-repeat: no-repeat;
+			background-size: cover;
+			border-radius: 50%;
+			opacity: 0.85;
+		}
+
+		.clip-thumbnail .overlay {
+			width: 100%;
+			height: 100%;
+			background-color: #fff3;
+			border-radius: 50%;
+			opacity: 0;
+			transition: 0.7s ease;
+			cursor: pointer;
+		}
+
+		.clip-thumbnail .overlay:hover {
+			opacity: 0.9;
+		}
+
+		.clip-thumbnail .overlay,
+		.clip-thumbnail .overlay i {
+			display: block;
+			position: absolute;
+			left: 50% !important;
+			top: 50% !important;
+			transform: translate(-50%, -50%) !important;
+			color: #27292aaa !important;
+		}
+
+		#levelsModal .modal-content {
+			background-color: #1f2122;
+			margin-top: 75%;
+		}
+
+		#levelsModal .modal-header {
+			border-color: #1117 !important;
 		}
 	</style>
 </head>
@@ -129,7 +178,7 @@
 								<% } else { %>
 									<li>
 										<a href="/profile" class="active">Profile <span class="profile-pic-cont">
-											<img class="profile-pic" src="<%= user.avatar %>" alt=""></span>
+												<img class="profile-pic" src="<%= user.avatar %>" alt=""></span>
 										</a>
 									</li>
 									<% } %>
@@ -165,7 +214,10 @@
 									</div>
 									<div class="col-lg-4 align-self-center">
 										<div class="main-info header-text">
-											<span class="edit-profile"><i class="fas fa-user-edit"></i>&nbsp;Edit</span>
+											<span class="edit-profile" role="button" data-toggle="modal" data-target="#editModal">
+
+												<i class="fas fa-user-edit"></i> Edit
+											</span>
 											<% if (!user) {%>
 												<h4>Not Logged in</h4>
 												<% } else { %>
@@ -174,9 +226,9 @@
 													</h4>
 													<% } %>
 														<% if (!user) {%>
-															<p>You Haven't logged in yet. Join us By pressing The Button Below.</p>
+															<p>You Haven't logged in yet. <br>Join us By pressing The Button Below.</p>
 															<% } else { %>
-																<p>You can customize your profile here. Press the Button Below to Logout.</p>
+																<p>You can customize your profile here. <br>Press the Button Below to Logout.</p>
 																<% } %>
 																	<div class="main-border-button">
 																		<% if (!user) {%>
@@ -203,6 +255,8 @@
 										</ul>
 									</div>
 								</div>
+
+
 								<div class="row">
 									<div class="col-lg-12">
 										<div class="clips">
@@ -212,63 +266,52 @@
 														<h4><em>Your Most Popular</em> Musics</h4>
 													</div>
 												</div>
-												<div class="col-lg-3 col-sm-6">
-													<div class="item">
-														<div class="thumb">
-															<img src="assets/images/clip-01.jpg" alt="" style="border-radius: 23px;">
-															<a href="https://www.youtube.com/watch?v=r1b03uKWk_M" target="_blank"><i
-																	class="fa fa-play"></i></a>
-														</div>
-														<div class="down-content">
-															<h4>First Clip</h4>
-															<span><i class="fa fa-eye"></i> 250</span>
-														</div>
-													</div>
-												</div>
-												<div class="col-lg-3 col-sm-6">
-													<div class="item">
-														<div class="thumb">
-															<img src="assets/images/clip-02.jpg" alt="" style="border-radius: 23px;">
-															<a href="https://www.youtube.com/watch?v=r1b03uKWk_M" target="_blank"><i
-																	class="fa fa-play"></i></a>
-														</div>
-														<div class="down-content">
-															<h4>Second Clip</h4>
-															<span><i class="fa fa-eye"></i> 183</span>
-														</div>
-													</div>
-												</div>
-												<div class="col-lg-3 col-sm-6">
-													<div class="item">
-														<div class="thumb">
-															<img src="assets/images/clip-03.jpg" alt="" style="border-radius: 23px;">
-															<a href="https://www.youtube.com/watch?v=r1b03uKWk_M" target="_blank"><i
-																	class="fa fa-play"></i></a>
-														</div>
-														<div class="down-content">
-															<h4>Third Clip</h4>
-															<span><i class="fa fa-eye"></i> 141</span>
+
+												<% musics.forEach(music=> { %>
+
+													<div class="col-lg-3 col-sm-6">
+														<div class="item music-clip"
+															style="background-color: #27292a88; display: flex; flex-direction: row; flex-wrap: nowrap; align-items: center; padding: 0.4em; gap: 0.15em;">
+															<div class="thumb" style="margin: 0;">
+																<span data-id="<%= music._id %>" class="clip-thumbnail"
+																	style="background-image: url('<%= music.thumbnail %>')">
+																	<span class="overlay">
+
+																		<i class="fas fa-play"></i>
+																	</span>
+																</span>
+															</div>
+															<div class="down-content"
+																style="width: 100%; padding-left: 0.5em; display: flex; flex-direction: column; justify-content: space-around; gap: 0.25em">
+																<h4 class="clip-title" data-id="<%= music._id %>"
+																	style="line-height: 1.2; cursor: pointer;">
+																	<%= music.title %>
+																</h4>
+																<div
+																	style="display: flex; flex-direction: row; justify-content: flex-start; flex-wrap: wrap; gap: 1em">
+																	<span><i class="fa fa-star"></i>
+																		<%= music.rating.toFixed(2) %>
+																	</span>
+																	<span><i class="fa fa-users"></i>
+																		<%= music.views %>
+																	</span>
+																</div>
+															</div>
 														</div>
 													</div>
-												</div>
-												<div class="col-lg-3 col-sm-6">
-													<div class="item">
-														<div class="thumb">
-															<img src="assets/images/clip-04.jpg" alt="" style="border-radius: 23px;">
-															<a href="https://www.youtube.com/watch?v=r1b03uKWk_M" target="_blank"><i
-																	class="fa fa-play"></i></a>
+
+													<% }); %>
+
+														<div class="col-lg-12">
+															<div class="d-flex align-items-center my-3"
+																style="margin: auto; width: 90%; display: none">
+																<hr class="flex-grow-1" style="border-color: #57575722;">
+																<span class="mx-3"><a class="btn btn-secondary"
+																		style="background-color: #5e8de7; border: none; border-radius: 23px; font-weight: bold;"
+																		href="/profile">Expand   <i class="fas fa-angle-double-down"></i> </a></span>
+																<hr class="flex-grow-1" style="border-color: #57575722;">
+															</div>
 														</div>
-														<div class="down-content">
-															<h4>Fourth Clip</h4>
-															<span><i class="fa fa-eye"></i> 91</span>
-														</div>
-													</div>
-												</div>
-												<div class="col-lg-12">
-													<div class="main-button">
-														<a href="#">Load More Musics</a>
-													</div>
-												</div>
 											</div>
 										</div>
 									</div>
@@ -279,70 +322,40 @@
 					<!-- ***** Banner End ***** -->
 
 					<!-- ***** Gaming Library Start ***** -->
-					<div class="gaming-library profile-library">
+					<div class="gaming-library">
 						<div class="col-lg-12">
 							<div class="heading-section">
 								<h4><em>Your Music</em> Library</h4>
+								<div class="dropdown">
+									<button class="btn btn-success dropdown-toggle" data-toggle="dropdown" aria-expanded="false"
+										type="button">
+										<i class="fas fa-filter"></i> <b>Filter</b>
+									</button>
+									<ul class="dropdown-menu bg-dark w-25 library-filter">
+										<li class="dropdown-item bg-dark text-light favorites">
+
+											<i class="fas fa-star text-warning"></i>  Favourites
+										</li>
+										<li class="dropdown-item bg-dark text-light uploaded">
+
+											<i class="fas fa-cloud-upload-alt text-primary"></i>  Uploaded
+										</li>
+									</ul>
+								</div>
 							</div>
-							<div class="item">
-								<ul>
-									<li><img src="assets/images/game-01.jpg" alt="" class="templatemo-item"></li>
-									<li>
-										<h4>Dota 2</h4><span>Sandbox</span>
-									</li>
-									<li>
-										<h4>Date Added</h4><span>24/08/2036</span>
-									</li>
-									<li>
-										<h4>Hours Played</h4><span>634 H 22 Mins</span>
-									</li>
-									<li>
-										<h4>Currently</h4><span>Downloaded</span>
-									</li>
-									<li>
-										<div class="main-border-button border-no-active"><a href="#">Donwloaded</a></div>
-									</li>
-								</ul>
+
+							<div class="music-library" style="display: block; margin-left: 3em; margin-right: 1em;">
+
 							</div>
-							<div class="item">
-								<ul>
-									<li><img src="assets/images/game-02.jpg" alt="" class="templatemo-item"></li>
-									<li>
-										<h4>Fortnite</h4><span>Sandbox</span>
-									</li>
-									<li>
-										<h4>Date Added</h4><span>22/06/2036</span>
-									</li>
-									<li>
-										<h4>Hours Played</h4><span>745 H 22 Mins</span>
-									</li>
-									<li>
-										<h4>Currently</h4><span>Downloaded</span>
-									</li>
-									<li>
-										<div class="main-border-button border-no-active"><a href="#">Donwloaded</a></div>
-									</li>
-								</ul>
-							</div>
-							<div class="item last-item">
-								<ul>
-									<li><img src="assets/images/game-03.jpg" alt="" class="templatemo-item"></li>
-									<li>
-										<h4>CS-GO</h4><span>Sandbox</span>
-									</li>
-									<li>
-										<h4>Date Added</h4><span>21/04/2022</span>
-									</li>
-									<li>
-										<h4>Hours Played</h4><span>632 H 46 Mins</span>
-									</li>
-									<li>
-										<h4>Currently</h4><span>Downloaded</span>
-									</li>
-									<li>
-										<div class="main-border-button border-no-active"><a href="#">Donwloaded</a></div>
-									</li>
-								</ul>
+
+						</div>
+						<div class="col-lg-12">
+							<div class="d-flex align-items-center my-4" style="margin: auto; width: 90%; display: none">
+								<hr class="flex-grow-1" style="border-color: #57575722;">
+								<span class="mx-3"><a class="btn btn-secondary"
+										style="background-color: #5e8de7; border: none; border-radius: 23px; font-weight: bold;"
+										href="/profile">Expand   <i class="fas fa-angle-double-down"></i> </a></span>
+								<hr class="flex-grow-1" style="border-color: #57575722;">
 							</div>
 						</div>
 					</div>
@@ -366,6 +379,18 @@
 	</footer>
 
 
+
+	<!-- Modals -->
+	<div class="modal fade levels-modal" tabindex="-1" id="levelsModal" aria-labelledby="levelsModalLabel"
+		aria-hidden="true">
+		<%- include('levels.ejs') %>
+	</div>
+	<div class="modal fade edit-modal" tabindex="-1" id="editModal" aria-labelledby="levelsModalLabel" aria-hidden="true">
+		<%- include('edit-profile.ejs') %>
+	</div>
+
+
+
 	<!-- Scripts -->
 	<script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
 
@@ -376,14 +401,12 @@
 		integrity="sha384-+sLIOodYLS7CIrQpBjl+C7nPvqq+FbNUBDunl/OZv93DB7Ln/533i8e/mZXLi/P+" crossorigin="anonymous">
 		</script>
 
+	<script src="/js/popup.js" defer></script>
+	<script src="/js/custom.js" defer></script>
+	<script src="/js/levels.js" defer></script>
+	<script src="/js/upload.js" defer></script>
 	<script src="/js/toasts.js"></script>
 	<script src="/js/affirm.js"></script>
-
-	<!-- <script src="assets/js/isotope.min.js"></script>
-	<script src="assets/js/owl-carousel.js"></script>
-	<script src="assets/js/tabs.js"></script>
-	<script src="assets/js/popup.js"></script> -->
-	<script src="/js/custom.js" defer></script>
 
 	<script defer>
 		$(document).ready(function () {
@@ -393,8 +416,76 @@
 					if (affirmed) location.href = '/logout';
 				});
 			});
+
+			$('#edit-form').on('submit', function (event) {
+				event.preventDefault();
+
+				let formData = new FormData(this);
+				for (let [key, value] of formData.entries()) {
+					console.log(`${key}: ${value}`);
+				}
+
+				console.log('formData:', formData);
+				$(this).find('.spinner-overlay').show();
+
+				setTimeout(() => {
+					$(this).find('.spinner-overlay').hide();
+					toastDanger('couldn\t edit profile')
+				}, 1000);
+				// fetch('/profile/edit', {
+				// 	method: 'POST',
+				// 	body: formData
+				// });
+			});
+		}); // doc ready
+
+	</script>
+
+
+	<script defer>
+		$(document).ready(function () {
+			// $('#levelsModal').modal('show');
+
+			/* eslint-disable no-undef */
+			// const clips = JSON.parse('<%- JSON.stringify(musics).replace(/\\/g, `\\\\`).replace(/\'/g, `\\\\`) %>');
+			const clips = JSON.parse('<%- JSON.stringify(musics).replace(/\\/g, `\\\\`).replace(/\'/g, `\\`) %>');
+			/* eslint-enable no-undef */
+
+			console.log('clips:', clips);
+
+			// Function to find item by id
+			function findClipById(id) {
+				return clips.find(item => item._id === id);
+			}
+
+			// Event listener for item clicks
+			$('.music-clip').each((index, element) => {
+				console.log('element:', element);
+				$(element).find('.clip-thumbnail, .clip-title').each((_, launcher) => {
+					$(launcher).on('click', function (event) {
+
+						console.log('launching modal...');
+						const clipId = $(launcher).data('id');
+						const clip = findClipById(clipId);
+						if (clip) {
+							console.log('launched');
+							$('#levelsModal .level-selector-title').text(`${clip.artist} - ${clip.title}`);
+							$('#levelsModal .thumbnail-img').attr('src', clip.thumbnail);
+							$('#levelsModal input[name="music"]').val(clip._id);
+
+							$('.levels-form').find('.thumbnail-img-overlay i').removeClass('far fas');
+							if (clip.favorite)
+								$('.levels-form').find('.thumbnail-img-overlay i').addClass('fas');
+							else $('.levels-form').find('.thumbnail-img-overlay i').addClass('far');
+							$('#levelsModal').modal('show');
+						}
+					})
+				});
+			});
 		});
 	</script>
+
+</body>
 
 </body>
 
