feat: Implement authentication middlewares and Improve Lyrics Typing
- Moved toast position from bottom to top
- Add authentication, permission and scope middlewares
- Protect dashboard access to admin only
- Refactored lyrics functionality
  - Added configurable options for capitalization, punctuation, and double spaces
  - Improved lyrics sync and video speed algorithm

--- a/public/css/toasts.css
+++ b/public/css/toasts.css
@@ -9,7 +9,7 @@
 	border-radius: 5px;
 	position: fixed;
 	left: 1em;
-	bottom: 1em;
+	top: 1em;
 	/* width: max-content; */
 	padding: 0.25em 0.25em;
 }
