--- a/src/views/dashboard/users.ejs
+++ b/src/views/dashboard/users.ejs
@@ -204,7 +204,7 @@
 						<div class="dropdown-menu" style="margin: auto; margin-right: 5rem;">
 							<a class="dropdown-item" href="#"><i class="fas fa-user-circle"></i> Profile</a>
 							<a class="dropdown-item" href="#"><i class="fas fa-cog"></i> Settings</a>
-							<a class="dropdown-item" href="#">Logout <i class="fas fa-sign-out-alt"></i></a>
+							<a class="dropdown-item" href="/logout">Logout <i class="fas fa-sign-out-alt"></i></a>
 						</div>
 					</div>
 				</div>
