--- a/src/views/practice/stats.ejs
+++ b/src/views/practice/stats.ejs
@@ -128,8 +128,8 @@
 	<h1 class="wpm-display"> 68 wpm </h1>
 	<!-- <img src="https://cdn-icons-png.flaticon.com/512/1047/1047711.png" alt="cookies-img" /> -->
 	<p class="favor" style="display: none"><i class="far fa-heart"></i> Add to favourites</p>
-	<button class="close-stats"><i class="fas fa-play-circle"></i>Continue</button>
-	<button class="replay" style="display: none"><i class="fas fa-sync-alt"></i> Replay</button>
+	<button class="resume continue close-stats"><i class="fas fa-play-circle"></i>Continue</button>
+	<button class="resume replay" style="display: none"><i class="fas fa-sync-alt"></i> Replay</button>
 	<!-- <a href="/">Go Home <i class="fas fa-home"></i></a> -->
 	<a href="/practice">Change Text <i class="fas fa-paragraph"></i></a>
 </div>
