--- a/src/views/practice/practiceMenus.ejs
+++ b/src/views/practice/practiceMenus.ejs
@@ -190,7 +190,7 @@
 </style>
 
 <div class="modal-dialog">
-	<form id="practice-menu" class="upload-container modal-content">
+	<form id="practice-menu" class="upload-container modal-content" action="#">
 		<div class="upload-header modal-header" style="border-color: #27292aaa !important;">
 			<h5 class="upload-title modal-title" id="uploadModalLabel">Practice Typing ✨</h5>
 			<i onclick="$('#practiceModal').modal('hide')" class="bi bi-x-octagon text-danger" type="button"
