--- a/src/views/profile.ejs
+++ b/src/views/profile.ejs
@@ -221,7 +221,7 @@
 											<% if (!user) {%>
 												<h4>Not Logged in</h4>
 												<% } else { %>
-													<h4>
+													<h4 style="text-transform: uppercase; font-weight: bold; font-size: 2rem; margin: 10px 0 20px 0;">
 														<%= user.name %>
 													</h4>
 													<% } %>
@@ -505,6 +505,7 @@
 						console.log('Upload complete!');
 						let response = JSON.parse(xhr.response);
 						$('.edit-avatar').css('background-image', `url('/${response.path}')`);
+						$('.edit-avatar').find('input[name="avatar"]').val(`${response.path}`);
 						toastSuccess('Thumbnail uploaded successfully!');
 					} else if (xhr.readyState == 4) {
 						let response = { error: 'nothing' };
@@ -525,32 +526,31 @@
 			});
 
 
-			$('.edit-form').on('submit', function (e) {
+			$('#edit-form').on('submit', function (e) {
 				e.preventDefault();
-				const avatar = $(this).find('input[name="avatar"]').val();
-				const name = $(this).find('input[name="name"]').val();
-				const email = $(this).find('input[name="email"]').val();
-				const originalEmail = $(this).find('input[name="original-email"]').val();
+				const formData = new FormData(this);
 
+				$('.spinner-overlay').show();
 				fetch('/profile/edit', {
 					method: 'PUT',
 					headers: {
-						'Content-Type': 'application/json'
+						'Accept': 'application/json'
 					},
-					body: JSON.stringify({ avatar, name, email, originalEmail })
+					body: formData
 				}).then(res => {
 					if (!res.ok) return res.json().then(err => Promise.reject(err));
 					return res.json();
 				}).then(res => {
 					$('.spinner-overlay').hide();
+					console.log('res:', res);
 					toastSuccess(res.message);
-					setTimeout(() => {
 					$('#editModal').modal('hide');
-				}, 500);
+					setTimeout(() => {
+						location.reload();
+					}, 100);
 				}).catch(err => {
-					console.error(err.message);
-				})
-
+					console.error(err);
+				});
 			});
 		});
 	</script>
