fix(urls): remove leading slash from video and lyrics URLs

--- a/src/views/lyrics/lyrics.ejs
+++ b/src/views/lyrics/lyrics.ejs
@@ -43,7 +43,7 @@
 
 	<div class="whole-body">
 		<video id="music-video" class="music-video" onseeking="do_seeking()" onseeked="do_seeked()">
-			<source src="/<%= music.video %>" type="video/mp4">
+			<source src="<%= music.video %>" type="video/mp4">
 			Your browser does not support HTML5 video.
 		</video>
 
